--- a/orangecap.html
+++ b/orangecap.html
@@ -4,16 +4,16 @@
 <meta charset="UTF-8">
 <title>orange cap</title>
 </head>
-<header><center><h2>orange cap</h2></center></header>
+<header><center><h1>orange cap</h1></center></header>
 
-  <marquee><p>will be availabe after qualifier 1</p></marquee>
+  <marquee><h6><p>will be availabe after qualifier 1</p></h6></marquee>
   
 <div>
-<h4>RANKS</h4>
+<h4>RANKS</h4><h6>
 <ul>
 <li>Sunil  :-</li>
 <li>Achuyth:-</li>
 <li>Hema   :-</li>
-</ul>
+</ul></h6>
 </div>
 </html>
