--- a/orangecap.html
+++ b/orangecap.html
@@ -7,13 +7,13 @@
 <header><center><h1>orange cap</h1></center></header>
 
   <marquee><h2><p>will be availabe after qualifier 1</p></h2></marquee>
-  
+  <center>
 <div>
-<h4>RANKS</h4><h2>
+<h2>RANKS</h2><h2>
 <ul>
 <li>Sunil  :-</li>
 <li>Achuyth:-</li>
 <li>Hema   :-</li>
 </ul></h2>
-</div>
+</div></center>
 </html>
