--- a/purplecap.html
+++ b/purplecap.html
@@ -4,16 +4,16 @@
 <meta charset="UTF-8">
 <title>purple cap</title>
 </head>
-<header><center><h2>Purple cap</h2></center></header>
+<header><center><h1>Purple cap</h1></center></header>
 
-  <marquee><p>will be availabe after qualifier 1</p></marquee>
-  
+  <marquee><h2><p>will be availabe after qualifier 1</p></h2></marquee>
+  <center>
 <div>
-<h4>RANKS</h4>
+<h2>RANKS</h2><h2>
 <ul>
 <li>Sunil  :-</li>
 <li>Achuyth:-</li>
 <li>Hema   :-</li>
-</ul>
-</div>
+</ul></h2>
+</div></center>
 </html>
