--- a/wallet.html
+++ b/wallet.html
@@ -3,13 +3,13 @@
 <meta charset="UTF-8">
 <title>Wallet balance</title>
 </head>
-<header><center><h2>Wallet balance</h2></center></header>
-
-<div>
+<header><center><h1>Wallet balance</h1></center></header>
+<center>
+<div><h2>
 <ul>
 <li>Sunil  :-</li>
 <li>Achuyth:-</li>
 <li>Hema   :-</li>
-</ul>
-</div>
+</ul></h2>
+</div></center>
 </html>
