--- a/purplecap.html
+++ b/purplecap.html
@@ -10,10 +10,10 @@
   <center>
 <div>
 <h2>RANKS</h2><h2>
-<ul>
-<li>Sunil  :-</li>
-<li>Achuyth:-</li>
-<li>Hema   :-</li>
+<ul><center>
+<li>Sunil  :-</li></center><center>
+<li>Achuyth:-</li></center><center>
+<li>Hema   :-</li></center>
 </ul></h2>
 </div></center>
 </html>
