--- a/wallet.html
+++ b/wallet.html
@@ -7,9 +7,9 @@
 <center>
 <div><h2>
 <ul>
-<li>Sunil  :-</li>
-<li>Achuyth:-</li>
-<li>Hema   :-</li>
+<li>Sunil  :- 92.5</li>
+<li>Achuyth:- 150</li>
+<li>Hema   :- 57.5</li>
 </ul></h2>
 </div></center>
 </html>
