--- a/results.html
+++ b/results.html
@@ -4,16 +4,16 @@
 <meta charset="UTF-8">
 <title>results</title>
 </head>
-<header><center><h2>results</h2></center></header>
+<header><center><h1>results</h1></center></header>
 
   <!--marquee><p>will be availabe after qualifier 1</p></marquee-->
-  
+  <center>
 <div>
-<h4>RANKS</h4>
+<h2>RANKS</h2><h2>
 <ul>
 <li>Sunil  :-422</li>
 <li>Achuyth:-538pts</li>
 <li>Hema   :-464.5</li>
-</ul>
-</div>
+</ul></h2>
+</div></center>
 </html>
