--- a/orangecap.html
+++ b/orangecap.html
@@ -15,5 +15,6 @@
 <li>Achuyth:-</li>
 <li>Hema   :-</li>
 </ul></h2>
-</div></center>
+</div><p>entry fee is 10/- the points of all batsman and wicket keeper will cosidered of all 5 playoff matches(all rounders are not considered)</p></center>
+
 </html>
