--- a/purplecap.html
+++ b/purplecap.html
@@ -15,5 +15,5 @@
 <li>Achuyth:-</li></center><center>
 <li>Hema   :-</li></center>
 </ul></h2>
-</div></center>
+</div> <p>entry fee is 10/- the points of all bowlers will cosidered of all 5 playoff matches(all rounders are not considered)</p></center>
 </html>
