--- a/results.html
+++ b/results.html
@@ -11,9 +11,9 @@
 <div>
 <h2>RANKS</h2><h2>
 <ul>
-<li>Sunil  :-422</li>
-<li>Achuyth:-538pts</li>
-<li>Hema   :-464.5</li>
+<li>Sunil  :-601</li>
+<li>Achuyth:-683pts</li>
+<li>Hema   :- NA</li>
 </ul></h2>
 </div></center>
 </html>
