--- a/results.html
+++ b/results.html
@@ -11,7 +11,7 @@
 <div>
 <h2>RANKS</h2><h2>
 <ul>
-<li>Sunil  :-601</li>
+<li>Sunil  :-601pts</li>
 <li>Achuyth:-683pts</li>
 <li>Hema   :- NA</li>
 </ul></h2>
