--- a/results.html
+++ b/results.html
@@ -5,7 +5,7 @@
 <title>results</title>
 </head>
 <header><center><h1>results</h1></center></header>
-<img src="kxipvsrr.jpg"/>
+<img src="kxipvsrr.jpg" alt="points"/>
   <!--marquee><p>will be availabe after qualifier 1</p></marquee-->
   <center>
 <div>
