--- a/match2.html
+++ b/match2.html
@@ -21,11 +21,11 @@
 <br>
 <h2>
 <ul>
-<p>match 2 </p>
+<p>DC VS MI </p>
 <li>Sunil  :-pts</li>
 <li>Achuyth:-pts</li>
 <li>Hema   :-pts</li>
 </ul></h2>
-<img src="kxipvsrr.jpg" alt="points"/>
+<img src="dcvsmi.jpg" alt="points"/>
 </div></center>
 </html>
