--- a/match2.html
+++ b/match2.html
@@ -22,9 +22,9 @@
 <h2>
 <ul>
 <p>DC VS MI </p>
-<li>Sunil  :-pts</li>
-<li>Achuyth:-pts</li>
-<li>Hema   :-pts</li>
+<li>Sunil  : 411pts</li>
+<li>Achuyth: 466pts</li>
+<li>Hema   : 465.5pts</li>
 </ul></h2>
 <img src="dcvsmi.jpg" alt="points"/>
 </div></center>
