--- a/results.html
+++ b/results.html
@@ -6,22 +6,22 @@
 </head>
 <header><center><h1>results</h1></center></header>
 
-  <!--marquee><p>will be availabe after qualifier 1</p></marquee-->
+  <marquee><p>Points for each question will be mailed negative points will subtract from previous question</p></marquee>
   <center>
 <div>
 <h2>RANKS</h2><h2>
 <ul>
-<p>match 1</p>
-<li>Sunil  :-601pts</li>
-<li>Achuyth:-683pts</li>
-<li>Hema   :- NA</li>
+<p>KKR VS RR</p>
+<li>Sunil  :- pts</li>
+<li>Achuyth:- pts</li>
+<li>Hema   :- pts</li>
 </ul></h2>
-<img src="kxipvsrr.jpg" alt="points"/>
+<!--img src=".jpg" alt="points"/-->
 <br>
 <br><!--
 <h2>
 <ul>
-<p>match 2 </p>
+<p>KKR VS RR </p>
 <li>Sunil  :-601pts</li>
 <li>Achuyth:-683pts</li>
 <li>Hema   :- NA</li>
