--- a/match2.html
+++ b/match2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>results</title>
-</head>
+</head><link rel="stylesheet" href="hw1.css">
 <header><center><h1>results</h1></center></header>
 
   <!--marquee><p>will be availabe after qualifier 1</p></marquee-->
