--- a/purplecap.html
+++ b/purplecap.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>purple cap</title>
-</head>
+</head><link rel="stylesheet" href="hw1.css">
 <header><center><h1>Purple cap</h1></center></header>
 
   <marquee><h2><p>will be availabe after qualifier 1</p></h2></marquee>
