--- a/results.html
+++ b/results.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>results</title>
-</head>
+</head><link rel="stylesheet" href="hw1.css">
 <header><center><h1>results</h1></center></header>
 
   <marquee><p>Points for each question will be mailed negative points will subtract from previous question</p></marquee>
