--- a/wallet.html
+++ b/wallet.html
@@ -1,5 +1,5 @@
 <html lang="en">
-<head>
+<head><link rel="stylesheet" href="hw1.css">
 <meta charset="UTF-8">
 <title>Wallet balance</title>
 </head>
