--- a/orangecap.html
+++ b/orangecap.html
@@ -16,5 +16,4 @@
 <li>Hema   :-</li>
 </ul></h2>
 </div><p>entry fee is 10/- the points of all batsman and wicket keeper will cosidered of all 5 playoff matches(all rounders are not considered)</p></center>
-<iframe class="u2quVpIWVr0__amp-doc v2FKFf" allow="autoplay" allowfullscreen="true" allowpaymentrequest="true" loading="eager" name="https://m.eenadu.net/" src="https://m-eenadu-net.cdn.ampproject.org/v/s/m.eenadu.net/?usqp=mq331AQFKAGwASA%3D&amp;amp_js_v=0.1#aoh=16043349829896&amp;origin=https://www.google.com&amp;cid=1&amp;prerenderSize=1&amp;visibilityState=visible&amp;paddingTop=32&amp;history=1&amp;p2r=0&amp;csi=1&amp;storage=1&amp;viewerUrl=https://www.google.com/amp/s/m.eenadu.net/&amp;cap=navigateTo,fragment,handshakepoll,cid,replaceUrl,fullReplaceHistory" style="height: 540px;"></iframe>
-</html>
+<iframe style="overflow-x:hidden;overflow-y:auto;" src="http://cricket-app-hrd.appspot.com/" width="650" height="800" marginheight='0' frameborder="0" scrolling="yes"></iframe></html>
