--- a/match2.html
+++ b/match2.html
@@ -12,8 +12,8 @@
 <h2>RANKS</h2><!--<h2>
 <ul>
 <p>match 1</p>
-<li>Sunil  :-601pts</li>
-<li>Achuyth:-683pts</li>
+<li>Sunil  :-494pts</li>
+<li>Achuyth:-484pts</li>
 <li>Hema   :- NA</li>
 </ul></h2>
 <img src="kxipvsrr.jpg" alt="points"/>-->
@@ -21,11 +21,11 @@
 <br>
 <h2>
 <ul>
-<p>DC VS MI </p>
-<li>Sunil  : 411pts</li>
-<li>Achuyth: 466pts</li>
-<li>Hema   : 465.5pts</li>
+<p>DC VS RCB </p>
+<li>Sunil  : 494pts</li>
+<li>Achuyth: 484pts</li>
+<li>Hema   : NA</li>
 </ul></h2>
-<img src="dcvsmi.jpg" alt="points"/>
+<img src="dcvsrcb.jpg" alt="points"/>
 </div></center>
 </html>
