--- a/match2.html
+++ b/match2.html
@@ -21,11 +21,11 @@
 <br>
 <h2>
 <ul>
-<p>DC VS RCB </p>
-<li>Sunil  : 494pts</li>
-<li>Achuyth: 484pts</li>
+<p>MI VS SRH </p>
+<li>Sunil  : 695.5pts</li>
+<li>Achuyth: 606.5pts</li>
 <li>Hema   : NA</li>
 </ul></h2>
-<img src="dcvsrcb.jpg" alt="points"/>
+<img src="mivssrh.jpg" alt="points"/>
 </div></center>
 </html>
