--- a/match2.html
+++ b/match2.html
@@ -9,23 +9,23 @@
   <!--marquee><p>will be availabe after qualifier 1</p></marquee-->
   <center>
 <div>
-<h2>RANKS</h2><!--<h2>
+<h2>RANKS</h2><h2>
 <ul>
-<p>match 1</p>
-<li>Sunil  :-494pts</li>
-<li>Achuyth:-484pts</li>
+<p>MI vs DC player battles </p>
+<li>Sunil  :-857pts</li>
+<li>Achuyth:-548pts</li>
 <li>Hema   :- NA</li>
 </ul></h2>
-<img src="kxipvsrr.jpg" alt="points"/>-->
+<!--img src="kxipvsrr.jpg" alt="points"/-->
 <br>
 <br>
 <h2>
 <ul>
-<p>MI VS SRH </p>
-<li>Sunil  : 695.5pts</li>
-<li>Achuyth: 606.5pts</li>
+<p>MI VS DC picks </p>
+<li>Sunil  : 42</li>
+<li>Achuyth: 56</li>
 <li>Hema   : NA</li>
 </ul></h2>
-<img src="mivssrh.jpg" alt="points"/>
+<!--img src="mivssrh.jpg" alt="points"/-->
 </div></center>
 </html>
