--- a/results.html
+++ b/results.html
@@ -11,20 +11,20 @@
 <div>
 <h2>RANKS</h2><h2>
 <ul>
-<p>KKR VS RR</p>
-<li>Sunil  :- pts</li>
-<li>Achuyth:- pts</li>
-<li>Hema   :- pts</li>
+<p>MI VS DC</p>
+<li>Sunil  :- 728pts</li>
+<li>Achuyth:- 462pts</li>
+<li>Hema   :- 712pts</li>
 </ul></h2>
-<!--img src=".jpg" alt="points"/-->
+<img src="mivsdc.jpg" alt="points"/>
 <br>
 <br><!--
 <h2>
 <ul>
-<p>KKR VS RR </p>
-<li>Sunil  :-601pts</li>
-<li>Achuyth:-683pts</li>
-<li>Hema   :- NA</li>
+<p>MI VS DC </p>
+<li>Sunil  :-728pts</li>
+<li>Achuyth:-462pts</li>
+<li>Hema   :-712</li>
 </ul></h2>-->
 </div></center>
 </html>
