--- a/orangecap.html
+++ b/orangecap.html
@@ -6,14 +6,14 @@
 </head><link rel="stylesheet" href="hw1.css">
 <header><center><h1>orange cap</h1></center></header>
 
-  <marquee><h2><p>will be availabe after qualifier 1</p></h2></marquee>
+  <!--marquee><h2><p>will be availabe after qualifier 1</p></h2></marquee-->
   <center>
 <div>
 <h2>RANKS</h2><h2>
 <ul>
-<li>Sunil  :-</li>
-<li>Achuyth:-</li>
-<li>Hema   :-</li>
+<li>Sunil  :-295</li>
+<li>Achuyth:-266</li>
+<li>Hema   :-302</li>
 </ul></h2>
 </div><p>entry fee is 10/- the points of all batsman and wicket keeper will cosidered of all 5 playoff matches(all rounders are not considered)</p></center>
 <iframe style="overflow-x:hidden;overflow-y:auto;" src="http://cricket-app-hrd.appspot.com/" width="650" height="800" marginheight='0' frameborder="0" scrolling="yes"></iframe></html>
