--- a/purplecap.html
+++ b/purplecap.html
@@ -6,14 +6,14 @@
 </head><link rel="stylesheet" href="hw1.css">
 <header><center><h1>Purple cap</h1></center></header>
 
-  <marquee><h2><p>will be availabe after qualifier 1</p></h2></marquee>
+  <!--marquee><h2><p>will be availabe after qualifier 1</p></h2></marquee-->
   <center>
 <div>
 <h2>RANKS</h2><h2>
 <ul><center>
-<li>Sunil  :-</li></center><center>
-<li>Achuyth:-</li></center><center>
-<li>Hema   :-</li></center>
+<li>Sunil  :-216</li></center><center>
+<li>Achuyth:-193</li></center><center>
+<li>Hema   :-120</li></center>
 </ul></h2>
 </div> <p>entry fee is 10/- the points of all bowlers will cosidered of all 5 playoff matches(all rounders are not considered)</p></center>
 </html>
