--- a/results.html
+++ b/results.html
@@ -6,7 +6,7 @@
 </head><link rel="stylesheet" href="hw1.css">
 <header><center><h1>results</h1></center></header>
 
-  <marquee><p>Points for each question will be mailed negative points will subtract from previous question</p></marquee>
+  <!--marquee><p>Points for each question will be mailed negative points will subtract from previous question</p></marquee-->
   <center>
 <div>
 <h2>RANKS</h2><h2>
