--- a/match2.html
+++ b/match2.html
@@ -11,19 +11,19 @@
 <div>
 <h2>RANKS</h2><h2>
 <ul>
-<p>MI vs DC player battles </p>
-<li>Sunil  :-857pts</li>
-<li>Achuyth:-548pts</li>
-<li>Hema   :- NA</li>
+<p>SRH vs RCB player battles </p>
+<li>Sunil  :-475pts</li>
+<li>Achuyth:-666pts</li>
+<li>Hema   :-547 </li>
 </ul></h2>
 <!--img src="kxipvsrr.jpg" alt="points"/-->
 <br>
 <br>
 <h2>
 <ul>
-<p>MI VS DC picks </p>
-<li>Sunil  : 42</li>
-<li>Achuyth: 56</li>
+<p>SRH VS RCB picks </p>
+<li>Sunil  : 70</li>
+<li>Achuyth: 60</li>
 <li>Hema   : NA</li>
 </ul></h2>
 <!--img src="mivssrh.jpg" alt="points"/-->
