--- a/match2.html
+++ b/match2.html
@@ -14,7 +14,7 @@
 <p>SRH vs RCB player battles </p>
 <li>Sunil  :-475pts</li>
 <li>Achuyth:-666pts</li>
-<li>Hema   :-547 </li>
+<li>Hema   :-547pts </li>
 </ul></h2>
 <!--img src="kxipvsrr.jpg" alt="points"/-->
 <br>
