--- a/results.html
+++ b/results.html
@@ -11,12 +11,12 @@
 <div>
 <h2>RANKS</h2><h2>
 <ul>
-<p>SRH VS RCB</p>
-<li>Sunil  :- 502pts</li>
-<li>Achuyth:- 478.5pts</li>
-<li>Hema   :- 548.5pts</li>
+<p>SRH VS DC</p>
+<li>Sunil  :- 434.5pts</li>
+<li>Achuyth:- 544pts</li>
+<li>Hema   :- 567pts</li>
 </ul></h2>
-<img src="srhvsrcb.jpg" alt="points"/>
+<img src="srhvsdc.jpg" alt="points"/>
 <br>
 <br><!--
 <h2>
