--- a/match2.html
+++ b/match2.html
@@ -11,10 +11,10 @@
 <div>
 <h2>RANKS</h2><h2>
 <ul>
-<p>SRH vs RCB player battles </p>
-<li>Sunil  :-475pts</li>
-<li>Achuyth:-666pts</li>
-<li>Hema   :-547pts </li>
+<p>SRH vs DC player battles </p>
+<li>Sunil  :-425pts</li>
+<li>Achuyth:-578pts</li>
+<li>Hema   :-412pts </li>
 </ul></h2>
 <!--img src="kxipvsrr.jpg" alt="points"/-->
 <br>
@@ -22,9 +22,9 @@
 <h2>
 <ul>
 <p>SRH VS RCB picks </p>
-<li>Sunil  : 70</li>
-<li>Achuyth: 60</li>
-<li>Hema   : NA</li>
+<li>Sunil  : 32</li>
+<li>Achuyth: 74</li>
+<li>Hema   : 84</li>
 </ul></h2>
 <!--img src="mivssrh.jpg" alt="points"/-->
 </div></center>
