--- a/match2.html
+++ b/match2.html
@@ -11,20 +11,20 @@
 <div>
 <h2>RANKS</h2><h2>
 <ul>
-<p>SRH vs DC player battles </p>
-<li>Sunil  :-425pts</li>
-<li>Achuyth:-578pts</li>
-<li>Hema   :-412pts </li>
+<p>MI vs DC player battles </p>
+<li>Sunil  :-284pts</li>
+<li>Achuyth:-473pts</li>
+<li>Hema   :-352pts </li>
 </ul></h2>
 <!--img src="kxipvsrr.jpg" alt="points"/-->
 <br>
 <br>
 <h2>
 <ul>
-<p>SRH VS RCB picks </p>
-<li>Sunil  : 32</li>
-<li>Achuyth: 74</li>
-<li>Hema   : 84</li>
+<p>MI VS DC picks </p>
+<li>Sunil  : -20</li>
+<li>Achuyth: 56</li>
+<li>Hema   : 56</li>
 </ul></h2>
 <!--img src="mivssrh.jpg" alt="points"/-->
 </div></center>
