--- a/match2.html
+++ b/match2.html
@@ -22,9 +22,9 @@
 <h2>
 <ul>
 <p>MI VS DC picks </p>
-<li>Sunil  : -20</li>
-<li>Achuyth: 56</li>
-<li>Hema   : 56</li>
+<li>Sunil  : -20pts</li>
+<li>Achuyth: 56pts</li>
+<li>Hema   : 56pts</li>
 </ul></h2>
 <!--img src="mivssrh.jpg" alt="points"/-->
 </div></center>
