--- a/orangecap.html
+++ b/orangecap.html
@@ -11,9 +11,9 @@
 <div>
 <h2>RANKS</h2><h2>
 <ul>
-<li>Sunil  :-875</li>
-<li>Achuyth:-834</li>
-<li>Hema   :-846</li>
+<li>Sunil  :-875pts</li>
+<li>Achuyth:-834pts</li>
+<li>Hema   :-846pts</li>
 </ul></h2>
 </div><p>entry fee is 10/- the points of all batsman and wicket keeper will cosidered of all 5 playoff matches(all rounders are not considered)</p></center>
 <iframe style="overflow-x:hidden;overflow-y:auto;" src="http://cricket-app-hrd.appspot.com/" width="650" height="800" marginheight='0' frameborder="0" scrolling="yes"></iframe></html>
