--- a/purplecap.html
+++ b/purplecap.html
@@ -11,9 +11,9 @@
 <div>
 <h2>RANKS</h2><h2>
 <ul><center>
-<li>Sunil  :-500</li></center><center>
-<li>Achuyth:-600</li></center><center>
-<li>Hema   :-597</li></center>
+<li>Sunil  :-500pts</li></center><center>
+<li>Achuyth:-600pts</li></center><center>
+<li>Hema   :-597pts</li></center>
 </ul></h2>
 </div> <p>entry fee is 10/- the points of all bowlers will cosidered of all 5 playoff matches(all rounders are not considered)</p></center>
 </html>
