--- a/biggboss.html
+++ b/biggboss.html
@@ -3,31 +3,18 @@
 <meta charset="UTF-8">
 <title>biggboss</title>
 <h2>Big Boss voting </h2>
-<script>
-function getVote(int) {
-  var xmlhttp=new XMLHttpRequest();
-  xmlhttp.onreadystatechange=function() {
-    if (this.readyState==4 && this.status==200) {
-      document.getElementById("poll").innerHTML=this.responseText;
-    }
-  }
-  xmlhttp.open("GET","poll_vote.php?vote="+int,true);
-  xmlhttp.send();
-}
-</script>
+
 </head>
 <body>
 
-<div id="poll">
-<h3>vote your contestants?</h3>
-<form>
-Abhijit <input type="radio" name="vote" value="0" onclick="getVote(this.value)"><br>
-Monal <input type="radio" name="vote" value="1" onclick="getVote(this.value)"><br>
-Aryana<input type="radio" name="vote" value="2" onclick="getVote(this.value)"><br>
-Sohel<input type="radio" name="vote" value="3" onclick="getVote(this.value)"><br>
-Harika<input type="radio" name="vote" value="4" onclick="getVote(this.value)">
-</form>
-</div>
+<div id="qp_all3284682" style="max-width: 600px; width: 100%;"><link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"></link><style>#qp_main3284682 .qp_btna:hover input {background: rgb(0, 53, 95)!important} #qp_all3284682 {max-width:815px; margin:0 auto;}</style><div fp="b9cC1585-101" id="qp_main3284682" results="0" style="background: rgb(255, 255, 255); border-radius: 0px; border: 1px solid rgb(219, 217, 217); box-sizing: border-box; color: black; font-family: &quot;Open Sans&quot;, sans-serif, Arial; margin: 0px auto 10px; max-width: 815px; padding: 0.8em; text-align: left;"><div style="background-color: #00355f; color: white; font-family: &quot;Open Sans&quot;, sans-serif, Arial; font-size: 1em;"><div style="line-height: 1.3em; padding: 0.8em;">Vote your favorite contestant?</div></div><form action="//www.poll-maker.com/results3284682xb9cC1585-101" id="qp_form3284682" method="post" style="display: inline; margin: 0px; padding: 0px;" target="_blank"><div style="padding: 0px;"><input name="qp_d3284682" type="hidden" value="44177.1604398108-44177.1603983067" /><div class="qp_a" onclick="var c=this.getElementsByTagName('INPUT')[0]; if((!event.target?event.srcElement:event.target).tagName!='INPUT'){c.checked=(c.type=='radio'?true:!c.checked)};var i=this.parentNode.parentNode.parentNode.getElementsByTagName('INPUT');for(var k=0;k!=i.length;k=k+1){i[k].parentNode.parentNode.setAttribute('sel',i[k].checked?1:0)}" style="border: 11px none rgb(107, 107, 107); clear: both; color: #6b6b6b; font-family: &quot;Open Sans&quot;, sans-serif, Arial; font-size: 1em; line-height: 1.5; margin: 10px 0px; padding: 13px 8px 11px;"><span style="cursor: inherit; display: block; padding-left: 30px;"><input name="qp_v3284682" style="-webkit-appearance: radio; float: left; height: 20px; margin-left: -25px; margin-top: 2px; padding: 0px; width: 20px;" type="radio" value="1" />Abhijit</span></div><div class="qp_a" onclick="var c=this.getElementsByTagName('INPUT')[0]; if((!event.target?event.srcElement:event.target).tagName!='INPUT'){c.checked=(c.type=='radio'?true:!c.checked)};var i=this.parentNode.parentNode.parentNode.getElementsByTagName('INPUT');for(var k=0;k!=i.length;k=k+1){i[k].parentNode.parentNode.setAttribute('sel',i[k].checked?1:0)}" style="border: 11px none rgb(107, 107, 107); clear: both; color: #6b6b6b; font-family: &quot;Open Sans&quot;, sans-serif, Arial; font-size: 1em; line-height: 1.5; margin: 10px 0px; padding: 13px 8px 11px;"><span style="cursor: inherit; display: block; padding-left: 30px;"><input name="qp_v3284682" style="-webkit-appearance: radio; float: left; height: 20px; margin-left: -25px; margin-top: 2px; padding: 0px; width: 20px;" type="radio" value="2" />Sohel</span></div><div class="qp_a" onclick="var c=this.getElementsByTagName('INPUT')[0]; if((!event.target?event.srcElement:event.target).tagName!='INPUT'){c.checked=(c.type=='radio'?true:!c.checked)};var i=this.parentNode.parentNode.parentNode.getElementsByTagName('INPUT');for(var k=0;k!=i.length;k=k+1){i[k].parentNode.parentNode.setAttribute('sel',i[k].checked?1:0)}" style="border: 11px none rgb(107, 107, 107); clear: both; color: #6b6b6b; font-family: &quot;Open Sans&quot;, sans-serif, Arial; font-size: 1em; line-height: 1.5; margin: 10px 0px; padding: 13px 8px 11px;"><span style="cursor: inherit; display: block; padding-left: 30px;"><input name="qp_v3284682" style="-webkit-appearance: radio; float: left; height: 20px; margin-left: -25px; margin-top: 2px; padding: 0px; width: 20px;" type="radio" value="3" />Aryana</span></div><div class="qp_a" onclick="var c=this.getElementsByTagName('INPUT')[0]; if((!event.target?event.srcElement:event.target).tagName!='INPUT'){c.checked=(c.type=='radio'?true:!c.checked)};var i=this.parentNode.parentNode.parentNode.getElementsByTagName('INPUT');for(var k=0;k!=i.length;k=k+1){i[k].parentNode.parentNode.setAttribute('sel',i[k].checked?1:0)}" style="border: 11px none rgb(107, 107, 107); clear: both; color: #6b6b6b; font-family: &quot;Open Sans&quot;, sans-serif, Arial; font-size: 1em; line-height: 1.5; margin: 10px 0px; padding: 13px 8px 11px;"><span style="cursor: inherit; display: block; padding-left: 30px;"><input name="qp_v3284682" style="-webkit-appearance: radio; float: left; height: 20px; margin-left: -25px; margin-top: 2px; padding: 0px; width: 20px;" type="radio" value="4" />Harika</span></div><div class="qp_a" onclick="var c=this.getElementsByTagName('INPUT')[0]; if((!event.target?event.srcElement:event.target).tagName!='INPUT'){c.checked=(c.type=='radio'?true:!c.checked)};var i=this.parentNode.parentNode.parentNode.getElementsByTagName('INPUT');for(var k=0;k!=i.length;k=k+1){i[k].parentNode.parentNode.setAttribute('sel',i[k].checked?1:0)}" style="border: 11px none rgb(107, 107, 107); clear: both; color: #6b6b6b; font-family: &quot;Open Sans&quot;, sans-serif, Arial; font-size: 1em; line-height: 1.5; margin: 10px 0px; padding: 13px 8px 11px;"><span style="cursor: inherit; display: block; padding-left: 30px;"><input name="qp_v3284682" style="-webkit-appearance: radio; float: left; height: 20px; margin-left: -25px; margin-top: 2px; padding: 0px; width: 20px;" type="radio" value="5" />Monal</span></div></div><div style="clear: both; margin: 1em auto; padding-left: 0px; text-align: left;"><a class="qp_btna" href="#" style="box-sizing: border-box; padding-right: 5px; text-decoration: none;"><input btype="v" name="qp_b3284682" style="-webkit-appearance: none; background-color: #0b79d3; border-radius: 0px; border: 0px; color: white; cursor: pointer; font-family: &quot;Open Sans&quot;, sans-serif, Arial; font-size: 16px; min-width: 7.8em; padding: 0.5em;" type="submit" value="Vote" /></a><a class="qp_btna" href="#" style="box-sizing: border-box; padding-left: 5px; text-decoration: none;"></a></div></form><div style="display: none;"><div id="qp_rp3284682" style="font-size: 14px; height: 1.5em; line-height: 1.5em; overflow: hidden; position: absolute; right: 5px; text-align: right; width: 5ex;"></div><div id="qp_rv3284682" style="box-sizing: border-box; color: white; font-size: 14px; line-height: 1.5em; padding-right: 3px; text-align: right; width: 0%;"></div><div id="qp_rb3284682" style="color: white; display: block; font-size: 14px; line-height: 1.5em;"></div><div id="qp_rva3284682" style="background: rgb(0, 111, 185); border-color: rgb(0, 111, 185);"></div><div id="qp_rvb3284682" style="background: rgb(22, 52, 99); border-color: rgb(22, 52, 99);"></div><div id="qp_rvc3284682" style="background: rgb(91, 207, 252); border-color: rgb(20, 129, 171);"></div></div></div><style t="633">
+
+.bclass {display:inline-block!important;}
+.aclass {display:none!important;}</style>
+<style t="653">div#headerflat {
+    display: none;
+}</style>
+<div style="margin: 5px; text-align: center;">Created with <a href="chhvap.github.io">harsh securities</a></div></div><script language="javascript" src="//scripts.poll-maker.com/3012/scpolls.js"></script>
 
 </body>
 </html>
