--- a/youtube.html
+++ b/youtube.html
@@ -2,5 +2,7 @@
 <head>	<meta charset="UTF-8">	<title>LOGO LAUNCH</title>	<link rel="stylesheet" href="hw1.css"></head>   
 <body>
 <center><h1> available soon</h1></center>
+<!--<h2><img src="logo.png" alt="points" background-color="yellow" height="500" width="500"/>logo</h2><body style="background-color:yellow;">-->
+
 </body>
 </html>
