--- a/youtube.html
+++ b/youtube.html
@@ -1,8 +1,13 @@
 <html lang="en">
 <head>	<meta charset="UTF-8">	<title>LOGO LAUNCH</title>	<link rel="stylesheet" href="hw1.css"></head>   
 <body>
-<center><h1> available soon</h1></center>
-<!--<h2><img src="logo.png" alt="points" background-color="yellow" height="500" width="500"/>logo</h2><body style="background-color:yellow;">-->
+<center><h1 colour="black"> available soon</h1></center>
+<!--<h2><img src="logo1.png" alt="points" background-color="yellow" height="500" width="500"/>logo</h2><body style="background-color:yellow;">
+<img src="logo2.png" alt="points" background-color="yellow" height="500" width="500"/>logo</h2><body style="background-color:yellow;">
 
+<video width="320" height="240" controls>
+  <source src="logo.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>-->
 </body>
 </html>
