--- a/youtube.html
+++ b/youtube.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>	<meta charset="UTF-8">	<title>LOGO LAUNCH</title>	<link rel="stylesheet" href="hw1.css"></head>   
 <body>
-<center><h1 colour="black"> available soon</h1></center>
+<center><h2>please rate us 1-5 in whatsapp</h2></center>
 <!--<h2><img src="logo1.png" alt="points" background-color="yellow" height="500" width="500"/>logo1</h2><body style="background-color:yellow;">
 <img src="logo2.png" alt="points" background-color="yellow" height="500" width="500"/>logo2</h2><body style="background-color:yellow;">
 
