--- a/youtube.html
+++ b/youtube.html
@@ -2,12 +2,12 @@
 <head>	<meta charset="UTF-8">	<title>LOGO LAUNCH</title>	<link rel="stylesheet" href="hw1.css"></head>   
 <body>
 <center><h2>please rate us 1-5 in whatsapp</h2></center>
-<!--<h2><img src="logo1.png" alt="points" background-color="yellow" height="500" width="500"/>logo1</h2><body style="background-color:yellow;">
+<h2><img src="logo1.png" alt="points" background-color="yellow" height="500" width="500"/>logo1</h2><body style="background-color:yellow;">
 <img src="logo2.png" alt="points" background-color="yellow" height="500" width="500"/>logo2</h2><body style="background-color:yellow;">
 
 <video width="320" height="240" controls>
   <source src="vedio.mp4" type="video/mp4">
   Your browser does not support the video tag.
-</video>-->
+</video>
 </body>
 </html>
