--- a/results.html
+++ b/results.html
@@ -6,15 +6,15 @@
 </head><link rel="stylesheet" href="hw1.css">
 <header><center><h1>results</h1></center></header>
 
-  <!--marquee><p>Points for each question will be mailed negative points will subtract from previous question</p></marquee-->
+  <marquee><p>Points for each question will be mailed negative points will subtract from previous question</p></marquee>
   <center>
 <div>
 <h2>RANKS</h2><h2>
 <ul>
-<p>MI VS DC</p>
-<li>Sunil  :- 358pts</li>
-<li>Achuyth:- 466.5pts</li>
-<li>Hema   :- 358pts</li>
+<p> VS </p>
+<li>Sunil  :- ---pts</li>
+<li>Achuyth:- ---pts</li>
+<li>Hema   :- ---pts</li>
 </ul></h2>
 <img src="mivsdc.jpg" alt="points"/>
 <br>
