--- a/match2.html
+++ b/match2.html
@@ -12,9 +12,9 @@
 <h2>RANKS</h2><h2>
 <ul>
 <p>MI vs DC player battles </p>
-<li>Sunil  :-284pts</li>
-<li>Achuyth:-473pts</li>
-<li>Hema   :-352pts </li>
+<li>Sunil  :---pts</li>
+<li>Achuyth:---pts</li>
+<li>Hema   :---pts </li>
 </ul></h2>
 <!--img src="kxipvsrr.jpg" alt="points"/-->
 <br>
@@ -22,9 +22,9 @@
 <h2>
 <ul>
 <p>MI VS DC picks </p>
-<li>Sunil  : -20pts</li>
-<li>Achuyth: 56pts</li>
-<li>Hema   : 56pts</li>
+<li>Sunil  : --pts</li>
+<li>Achuyth: --pts</li>
+<li>Hema   : --pts</li>
 </ul></h2>
 <!--img src="mivssrh.jpg" alt="points"/-->
 </div></center>
