--- a/orangecap.html
+++ b/orangecap.html
@@ -11,9 +11,9 @@
 <div>
 <h2>RANKS</h2><h2>
 <ul>
-<li>Sunil  :---pts</li>
-<li>Achuyth:---pts</li>
-<li>Hema   :---pts</li>
+<li>Sunil (warner) : 03pts</li>
+<li>Achuyth(Dhawan):085pts</li>
+<li></li>
 </ul></h2>
 </div><p>entry fee is 10/- the points of all batsman and wicket keeper will cosidered of all 5 playoff matches(all rounders are not considered)</p></center>
 <iframe style="overflow-x:hidden;overflow-y:auto;" src="http://cricket-app-hrd.appspot.com/" width="650" height="800" marginheight='0' frameborder="0" scrolling="yes"></iframe></html>
