--- a/purplecap.html
+++ b/purplecap.html
@@ -11,9 +11,9 @@
 <div>
 <h2>RANKS</h2><h2>
 <ul><center>
-<li>Sunil  :---pts</li></center><center>
-<li>Achuyth:---pts</li></center><center>
-<li>Hema   :---pts</li></center>
+<li>Sunil(rashid khan) :-02 wickets </li></center><center>
+<li>Achuyth(rabada)    :-00 wickets </li></center><center>
+<li></center>
 </ul></h2>
 </div> <p>entry fee is 10/- the points of all bowlers will cosidered of all 5 playoff matches(all rounders are not considered)</p></center>
 </html>
