--- a/results.html
+++ b/results.html
@@ -12,11 +12,11 @@
 <h2>RANKS</h2><h2>
 <ul>
 <p> VS </p>
-<li>Sunil  :- ---pts</li>
-<li>Achuyth:- ---pts</li>
-<li>Hema   :- ---pts</li>
+<li>Sunil  :- 756pts</li>
+<li>Achuyth:- 822pts</li>
+<li></li>
 </ul></h2>
-<img src="mivsdc.jpg" alt="points"/>
+<img src="rrvspbks.jpg" alt="points"/>
 <br>
 <br><!--
 <h2>
