--- a/results.html
+++ b/results.html
@@ -12,11 +12,11 @@
 <h2>RANKS</h2><h2>
 <ul>
 <p> VS </p>
-<li>Sunil  :- 602pts</li>
-<li>Achuyth:- 834.5pts</li>
+<li>Sunil  :- 410pts</li>
+<li>Achuyth:- 456pts</li>
 <li></li>
 </ul></h2>
-<img src="srhvsrcb.jpg" alt="points"/>
+<img src="rrvsdc.jpg" alt="points"/>
 <br>
 <br><!--
 <h2>
