--- a/results.html
+++ b/results.html
@@ -21,7 +21,7 @@
 <br><!--
 <h2>
 <ul>
-<p>MI VS DC </p>
+<p>PBKS VS CSK </p>
 <li>Sunil  :-362pts</li>
 <li>Achuyth:-527.5pts</li>
 <li>Hema   :-712</li>
