--- a/results.html
+++ b/results.html
@@ -11,9 +11,9 @@
 <div>
 <h2>RANKS</h2><h2>
 <ul>
-<p> VS </p>
-<li>Sunil  :- 410pts</li>
-<li>Achuyth:- 456pts</li>
+<p>PBKS VS CSK</p>
+<li>Sunil  :- 362pts</li>
+<li>Achuyth:- 527.5pts</li>
 <li></li>
 </ul></h2>
 <img src="pbksvscsk.jpg" alt="points"/>
