--- a/results.html
+++ b/results.html
@@ -11,12 +11,12 @@
 <div>
 <h2>RANKS</h2><h2>
 <ul>
-<p>PBKS VS CSK</p>
-<li>Sunil  :- 362pts</li>
-<li>Achuyth:- 527.5pts</li>
+<p>MI VS SRH</p>
+<li>Sunil  :- 558.5pts</li>
+<li>Achuyth:- 445.5pts</li>
 <li></li>
 </ul></h2>
-<img src="pbksvscsk.jpg" alt="points"/>
+<img src="mivssrh.jpg" alt="points"/>
 <br>
 <br><!--
 <h2>
