--- a/match2.html
+++ b/match2.html
@@ -12,20 +12,20 @@
 <h2>RANKS</h2><h2>
 <ul>
 <p>MI vs DC player battles </p>
-<li>Sunil  :---pts</li>
-<li>Achuyth:---pts</li>
-<li>Hema   :---pts </li>
+<li>Sunil  :629.5pts</li>
+<li>Achuyth:669pts</li>
+<li> </li>
 </ul></h2>
-<!--img src="kxipvsrr.jpg" alt="points"/-->
+<img src="dcvspbks.jpg" alt="points"/>
 <br>
 <br>
 <h2>
 <ul>
-<p>MI VS DC picks </p>
+<!--<p>MI VS DC picks </p>
 <li>Sunil  : --pts</li>
 <li>Achuyth: --pts</li>
 <li>Hema   : --pts</li>
-</ul></h2>
+</ul></h2>-->
 <!--img src="mivssrh.jpg" alt="points"/-->
 </div></center>
 </html>
