--- a/orangecap.html
+++ b/orangecap.html
@@ -11,8 +11,8 @@
 <div>
 <h2>RANKS</h2><h2>
 <ul>
-<li>Sunil (warner) :093pts</li>
-<li>Achuyth(Dhawan):094pts</li>
+<li>Sunil (warner) :093runs</li>
+<li>Achuyth(Dhawan):186runs</li>
 <li></li>
 </ul></h2>
 </div><p>entry fee is 10/- the points of all batsman and wicket keeper will cosidered of all 5 playoff matches(all rounders are not considered)</p></center>
