--- a/match2.html
+++ b/match2.html
@@ -11,10 +11,10 @@
 <div>
 <h2>RANKS</h2><h2>
 <ul>
-<p>MI vs DC player battles </p>
+<p>DC VS PBKS player</p>
 <li>Sunil  :629.5pts</li>
 <li>Achuyth:669pts</li>
-<li> </li>
+
 </ul></h2>
 <img src="dcvspbks.jpg" alt="points"/>
 <br>
