--- a/match2.html
+++ b/match2.html
@@ -11,7 +11,8 @@
 <div>
 <h2>RANKS</h2><h2>
 <ul>
-<p>DC VS PBKS player</p>
+<p>DC VS PBKS
+</p>
 <li>Sunil  :629.5pts</li>
 <li>Achuyth:669pts</li>
 
