--- a/results.html
+++ b/results.html
@@ -12,11 +12,11 @@
 <h2>RANKS</h2><h2>
 <ul>
 <p>KKR VS RCB</p>
-<li>Sunil  :- 591.5pts</li>
-<li>Achuyth:- 553pts</li>
+<li>Sunil  :- 620pts</li>
+<li>Achuyth:- 677.5pts</li>
 <li></li>
 </ul></h2>
-<img src="kkrvsrcb.jpg" alt="points"/>
+<img src="cskvsrr.jpg" alt="points"/>
 <br>
 <br><!--
 <h2>
