--- a/match2.html
+++ b/match2.html
@@ -11,13 +11,13 @@
 <div>
 <h2>RANKS</h2><h2>
 <ul>
-<p>DC VS PBKS
+<p>PBKS VS SRH
 </p>
-<li>Sunil  :629.5pts</li>
-<li>Achuyth:669pts</li>
+<li>Sunil  :398pts</li>
+<li>Achuyth:509pts</li>
 
 </ul></h2>
-<img src="dcvspbks.jpg" alt="points"/>
+<img src="pbksvssrh.jpg" alt="points"/>
 <br>
 <br>
 <h2>
