--- a/results.html
+++ b/results.html
@@ -11,12 +11,12 @@
 <div>
 <h2>RANKS</h2><h2>
 <ul>
-<p>DC VS MI</p>
-<li>Sunil  :- 424pts</li>
-<li>Achuyth:- 439.5pts</li>
+<p>KKR VS CSK</p>
+<li>Sunil  :- 622.5pts</li>
+<li>Achuyth:- 797pts</li>
 <li></li>
 </ul></h2>
-<img src="dcvsmi.jpg" alt="points"/>
+<img src="cskvskkr.jpg" alt="points"/>
 <br>
 <br><!--
 <h2>
