--- a/results.html
+++ b/results.html
@@ -11,9 +11,9 @@
 <div>
 <h2>RANKS</h2><h2>
 <ul>
-<p>KKR VS CSK</p>
-<li>Sunil  :- 622.5pts</li>
-<li>Achuyth:- 797pts</li>
+<p>RCB VS RR</p>
+<li>Sunil  :- 351pts</li>
+<li>Achuyth:- 609pts</li>
 <li></li>
 </ul></h2>
 <img src="cskvskkr.jpg" alt="points"/>
