--- a/results.html
+++ b/results.html
@@ -16,7 +16,7 @@
 <li>Achuyth:- 609pts</li>
 <li></li>
 </ul></h2>
-<img src="cskvskkr.jpg" alt="points"/>
+<img src="rcbvsrr.jpg" alt="points"/>
 <br>
 <br><!--
 <h2>
