--- a/match2.html
+++ b/match2.html
@@ -11,13 +11,13 @@
 <div>
 <h2>RANKS</h2><h2>
 <ul>
-<p>PBKS VS SRH
+<p>PBKS VS MI
 </p>
-<li>Sunil  :398pts</li>
-<li>Achuyth:509pts</li>
+<li>Sunil  :354pts</li>
+<li>Achuyth:556pts</li>
 
 </ul></h2>
-<img src="pbksvssrh.jpg" alt="points"/>
+<img src="pbksvsmi.jpg" alt="points"/>
 <br>
 <br>
 <h2>
